--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,10 +1,6 @@
 cmake_minimum_required(VERSION 3.10)
 project(cuda)
 
-set(
-        CMAKE_CXX_FLAGS -fPIC
-)
-
 find_package(CUDA QUIET REQUIRED)
 
 include_directories(
@@ -12,13 +8,17 @@ include_directories(
         src
 )
 
+include_directories(Program Files\JUCE\modules)
+
 set(
         CUDA_NVCC_FLAGS
         ${CUDA_NVCC_FLAGS};
+
 )
 
 cuda_add_executable(
         cuda_app
         main.cpp
-
+        src/kernels.cu
+        include/kernels.h
 )
