--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,6 +18,8 @@ find_package( OpenCV REQUIRED )
 
 find_package(Qt5 COMPONENTS Widgets REQUIRED)
 
+find_package(OpenCL REQUIRED)
+
 include_directories(
         include
         src
