--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,6 @@
 cmake_minimum_required(VERSION 3.10)
 project(cuda)
 
-set(CMAKE_AUTOMOC ON)
-set(CMAKE_AUTORCC ON)
-set(CMAKE_AUTOUIC ON)
 set(CMAKE_CONFIGURATION_TYPES "Debug" CACHE STRING "" FORCE)
 
 configure_file(matt.JPG matt.JPG COPYONLY)
@@ -15,40 +12,72 @@ elseif(WIN32)
     set(CMAKE_PREFIX_PATH "C:\\Qt\\5.12.6\\msvc2017_64")
 endif(UNIX AND NOT APPLE)
 
+configure_file(matt.JPG matt.JPG COPYONLY)
+
 find_package(CUDA QUIET REQUIRED)
-find_package( OpenCV REQUIRED )
-find_package(Qt5 COMPONENTS Widgets REQUIRED)
+find_package(OpenCV REQUIRED)
 find_package(OpenCL REQUIRED)
+find_package(OpenMP REQUIRED)
 
 include_directories(
         include
         src
-        ${OpenCL_INCLUDE_DIRS}
         ${OpenCV_INCLUDE_DIRS}
 )
 
-LINK_DIRECTORIES(${OpenCL_LIBRARY})
+if(CUDA_FOUND)
+    message("-- Cuda found")
 
-set(
-        CUDA_NVCC_FLAGS
-        "${CUDA_NVCC_FLAGS} -lOpenCL"
-)
+    set(
+            CUDA_NVCC_FLAGS
+            "${CUDA_NVCC_FLAGS}"
+    )
 
-cuda_add_executable(
-        cuda_app
-        main.cpp
-        src/cuda_kernels.cu
-        src/accelerator.cpp
-        src/opencl_kernels.cpp
-        include/cuda_kernels.hpp
-        include/accelerator.hpp
-        include/opencl_kernels.hpp
-)
+    add_definitions(-Dcuda_compile_check)
 
-target_link_libraries(cuda_app Qt5::Widgets)
-target_link_libraries(cuda_app ${CUDA_LIBRARIES})
-target_link_libraries(cuda_app ${OpenCL_LIBRARY})
+    cuda_add_executable(
+            cuda_app
+            main.cpp
+            src/cuda_kernels.cu
+            src/accelerator.cpp
+            include/cuda_kernels.hpp
+            include/accelerator.hpp
+    )
+
+    target_link_libraries(cuda_app ${CUDA_LIBRARIES})
+elseif(OpenCL_FOUND)
+    message("-- OpenCL found")
+
+    include_directories(${OpenCL_INCLUDE_DIRS})
+
+    LINK_DIRECTORIES(${OpenCL_LIBRARY})
+
+    add_definitions(-Dopencl_compile_check)
+
+    add_executable(
+            cuda_app
+            main.cpp
+            src/opencl_kernels.cpp
+            src/accelerator.cpp
+            include/opencl_kernels.hpp
+            include/accelerator.hpp
+    )
+
+    target_link_libraries(cuda_app ${OpenCL_LIBRARY})
+elseif(OpenMP_FOUND)
+    message("-- Nothing found")
+
+    set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
+    set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
+    set (CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS}")
+
+    add_executable(
+            cuda_app
+            main.cpp
+            src/accelerator.cpp
+            include/accelerator.hpp
+    )
+
+endif()
+
 target_link_libraries(cuda_app ${OpenCV_LIBS})
-
-
-
