--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,7 @@ project(cuda)
 
 set(CMAKE_CONFIGURATION_TYPES "Debug" CACHE STRING "" FORCE)
 
-configure_file(matt.JPG matt.JPG COPYONLY)
+#configure_file(matt.JPG matt.JPG COPYONLY)
 
 if(UNIX AND NOT APPLE)
     set(CMAKE_CXX_FLAGS -fPIC)
@@ -11,8 +11,6 @@ elseif(WIN32)
     set(OpenCV_DIR "C:\\Program Files\\openCV\\openCV\\opencv\\build")
     set(CMAKE_PREFIX_PATH "C:\\Qt\\5.12.6\\msvc2017_64")
 endif(UNIX AND NOT APPLE)
-
-configure_file(matt.JPG matt.JPG COPYONLY)
 
 find_package(CUDA QUIET REQUIRED)
 find_package(OpenCV REQUIRED)
