--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,7 @@ project(cuda)
 
 set(CMAKE_CONFIGURATION_TYPES "Debug" CACHE STRING "" FORCE)
 
-#configure_file(matt.JPG matt.JPG COPYONLY)
+configure_file(matt.JPG matt.JPG COPYONLY)
 
 if(UNIX AND NOT APPLE)
     set(CMAKE_CXX_FLAGS -fPIC)
